force-app/main/objects/TC_Transition_Slot__c.object
<CustomObject>
    <fields>
        <fullName>Booking_Availability__c</fullName>
        <label>Booking Availability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low Touch - Date Pre-allocated</fullName>
                </value>
                <value>
                    <fullName>Global Priority Slot - By Special Request</fullName>
                </value>
                <value>
                    <fullName>Standard_Bookable</fullName>
                    <label>Standard - Bookable</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirmed_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Confirmed Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Free_Spaces__c</fullName>
        <formula>Maximum_Transitions__c  - ( Provisional_Total__c  +  Confirmed_Total__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Free Spaces</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Full__c</fullName>
        <formula>If(  Free_Spaces__c  &lt;= 0, IMAGE(&quot;/servlet/servlet.FileDownload?file=01520000000Xjc7&quot;, &quot;Course Full&quot;),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maximum_Transitions__c</fullName>
        <label>Maximum Transitions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <formula>Case(TEXT(MONTH(Date__c)),&apos;1&apos;,&apos;January&apos;,&apos;2&apos;,&apos;February&apos;,&apos;3&apos;,&apos;March&apos;,&apos;4&apos;,&apos;April&apos;,&apos;5&apos;,&apos;May&apos;,&apos;6&apos;,&apos;June&apos;,&apos;7&apos;,&apos;July&apos;,&apos;8&apos;,&apos;August&apos;,&apos;9&apos;,&apos;September&apos;,&apos;10&apos;,&apos;October&apos;,&apos;11&apos;,&apos;November&apos;,&apos;12&apos;,&apos;December&apos;,&apos;&apos;)</formula>
        <label>Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Provisional_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Provisional Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transition_Slot_Description__c</fullName>
        <label>Transition Slot Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Transition_Slot_Type__c</fullName>
        <label>Transition Slot Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low Touch</fullName>
                </value>
                <value>
                    <fullName>Integrated</fullName>
                </value>
                <value>
                    <fullName>Standalone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>TC Transition Slot</label>
    <listViews>
        <fullName>All_Transitions</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Transition_Slot_Type__c</columns>
        <columns>Free_Spaces__c</columns>
        <columns>Provisional_Total__c</columns>
        <columns>Confirmed_Total__c</columns>
        <columns>Maximum_Transitions__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Transition_Slot_Type__c</field>
            <operation>equals</operation>
            <value>Standard,Complex,Integrated,Low Touch</value>
        </filters>
        <filters>
            <field>Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All Transitions today</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Transitions_sched_today_20181</fullName>
        <booleanFilter>1 AND 2 AND 3 AND (4 OR 5)</booleanFilter>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Transition_Slot_Type__c</columns>
        <columns>Confirmed_Total__c</columns>
        <columns>Provisional_Total__c</columns>
        <columns>Transition_Slot_Description__c</columns>
        <columns>Maximum_Transitions__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Transition_Slot_Type__c</field>
            <operation>equals</operation>
            <value>Low Touch,Integrated,Standalone</value>
        </filters>
        <filters>
            <field>Date__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Confirmed_Total__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Provisional_Total__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>All Transitions scheduled (- today)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Transitions_scheduled_today</fullName>
        <booleanFilter>1 AND 2 AND 3 AND (4 OR 5)</booleanFilter>
        <columns>Date__c</columns>
        <columns>NAME</columns>
        <columns>Transition_Slot_Description__c</columns>
        <columns>Confirmed_Total__c</columns>
        <columns>Provisional_Total__c</columns>
        <columns>Free_Spaces__c</columns>
        <columns>Maximum_Transitions__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Transition_Slot_Type__c</field>
            <operation>equals</operation>
            <value>Low Touch,Integrated,Standalone</value>
        </filters>
        <filters>
            <field>Date__c</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2020</value>
        </filters>
        <filters>
            <field>Confirmed_Total__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Provisional_Total__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>All Transitions scheduled (+ today)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Transitions_scheduled_today_2020</fullName>
        <booleanFilter>1 AND 2 AND 3 AND (4 OR 5)</booleanFilter>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Transition_Slot_Type__c</columns>
        <columns>Confirmed_Total__c</columns>
        <columns>Provisional_Total__c</columns>
        <columns>Transition_Slot_Description__c</columns>
        <columns>Maximum_Transitions__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Transition_Slot_Type__c</field>
            <operation>equals</operation>
            <value>Low Touch,Integrated,Standalone</value>
        </filters>
        <filters>
            <field>Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2020</value>
        </filters>
        <filters>
            <field>Confirmed_Total__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Provisional_Total__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>All Transitions scheduled (- today) 2020</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Transitions_today</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Transition_Slot_Description__c</columns>
        <columns>Provisional_Total__c</columns>
        <columns>Confirmed_Total__c</columns>
        <columns>Maximum_Transitions__c</columns>
        <columns>Free_Spaces__c</columns>
        <columns>Transition_Slot_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Transition_Slot_Type__c</field>
            <operation>equals</operation>
            <value>Low Touch,Integrated,Standalone</value>
        </filters>
        <filters>
            <field>Date__c</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2020</value>
        </filters>
        <label>All Transition Slots (+ today)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Available_Transitions_today</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Provisional_Total__c</columns>
        <columns>Confirmed_Total__c</columns>
        <columns>Maximum_Transitions__c</columns>
        <columns>Free_Spaces__c</columns>
        <columns>Transition_Slot_Description__c</columns>
        <columns>Transition_Slot_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Transition_Slot_Type__c</field>
            <operation>equals</operation>
            <value>Low Touch,Integrated,Standalone</value>
        </filters>
        <filters>
            <field>Date__c</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2020</value>
        </filters>
        <filters>
            <field>Free_Spaces__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>All Available Transitions (+ today)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Global_Priority_Transitions</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Free_Spaces__c</columns>
        <columns>Provisional_Total__c</columns>
        <columns>Confirmed_Total__c</columns>
        <columns>Maximum_Transitions__c</columns>
        <columns>Transition_Slot_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Transition_Slot_Type__c</field>
            <operation>equals</operation>
            <value>Standard,Complex,Integrated</value>
        </filters>
        <label>Global Priority Transitions</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>TCS-{000000}</displayFormat>
        <label>TC Transition Slot</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TC Transition Slots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>